obj/y.output
Terminals which are not used

   STRCONST
   KWD_STRING
   OPER_NEG
   OPER_MOD
   OPER_AT
   OPER_INC
   OPER_DEC
   OPER_AND
   OPER_OR
   OPER_NOT
   ERROR
   ILLEGAL_TOK
   COMMENT
   NEWLINE
   WHITESPACE
   MULTLNCOMMENT


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: decl
    3         | declList decl

    4 decl: varDecl
    5     | funDecl

    6 typeSpecifier: KWD_INT
    7              | KWD_CHAR
    8              | KWD_VOID

    9 varDecl: typeSpecifier ID SEMICLN
   10        | typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN

   11 funcTypeName: typeSpecifier ID

   12 formalDeclList: formalDecl
   13               | formalDecl COMMA formalDeclList

   14 formalDecl: typeSpecifier ID
   15           | typeSpecifier ID LSQ_BRKT RSQ_BRKT

   16 funDecl: funcTypeName LPAREN formalDeclList RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT
   17        | funcTypeName LPAREN RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT

   18 localDeclList: /* empty */
   19              | varDecl localDeclList

   20 statementList: /* empty */
   21              | statement statementList

   22 statement: compoundStmt
   23          | assignStmt
   24          | condStmt
   25          | loopStmt
   26          | returnStmt

   27 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT

   28 assignStmt: var OPER_ASGN expression SEMICLN
   29           | expression SEMICLN

   30 condStmt: KWD_IF LPAREN expression RPAREN statement
   31         | KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement

   32 loopStmt: KWD_WHILE LPAREN expression RPAREN statement

   33 returnStmt: KWD_RETURN SEMICLN
   34           | KWD_RETURN expression SEMICLN

   35 expression: addExpr
   36           | expression relop addExpr

   37 relop: OPER_LTE
   38      | OPER_LT
   39      | OPER_GT
   40      | OPER_GTE
   41      | OPER_EQ
   42      | OPER_NEQ

   43 addExpr: term
   44        | addExpr addop term

   45 addop: OPER_ADD
   46      | OPER_SUB

   47 term: factor
   48     | term mulop factor

   49 mulop: OPER_MUL
   50      | OPER_DIV

   51 factor: LPAREN expression RPAREN
   52       | var
   53       | funCallExpr
   54       | INTCONST
   55       | CHARCONST

   56 var: ID
   57    | ID LSQ_BRKT addExpr RSQ_BRKT

   58 funCallExpr: ID LPAREN RPAREN
   59            | ID LPAREN argList RPAREN

   60 argList: expression
   61        | argList COMMA expression


Terminals, with rules where they appear

$end (0) 0
ID (251) 9 10 11 14 15 56 57 58 59
INTCONST (252) 10 54
CHARCONST (253) 55
STRCONST (254)
KWD_IF (255) 30 31
KWD_ELSE (256) 31
KWD_WHILE (257) 32
KWD_INT (258) 6
KWD_STRING (259)
KWD_CHAR (260) 7
KWD_RETURN (261) 33 34
KWD_VOID (262) 8
OPER_ADD (263) 45
OPER_SUB (264) 46
OPER_MUL (265) 49
OPER_DIV (266) 50
OPER_LT (267) 38
OPER_GT (268) 39
OPER_GTE (269) 40
OPER_LTE (270) 37
OPER_EQ (271) 41
OPER_NEQ (272) 42
OPER_ASGN (273) 28
LSQ_BRKT (274) 10 15 57
RSQ_BRKT (275) 10 15 57
LCRLY_BRKT (276) 16 17 27
RCRLY_BRKT (277) 16 17 27
LPAREN (278) 16 17 30 31 32 51 58 59
RPAREN (279) 16 17 30 31 32 51 58 59
COMMA (280) 13 61
SEMICLN (281) 9 10 28 29 33 34
OPER_NEG (282)
OPER_MOD (283)
OPER_AT (284)
OPER_INC (285)
OPER_DEC (286)
OPER_AND (287)
OPER_OR (288)
OPER_NOT (289)
ERROR (290)
ILLEGAL_TOK (291)
COMMENT (292)
NEWLINE (293)
WHITESPACE (294)
MULTLNCOMMENT (295)
error (296)
LOWER_THAN_ELSE (298)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
declList (51)
    on left: 2 3, on right: 1 3
decl (52)
    on left: 4 5, on right: 2 3
typeSpecifier (53)
    on left: 6 7 8, on right: 9 10 11 14 15
varDecl (54)
    on left: 9 10, on right: 4 19
funcTypeName (55)
    on left: 11, on right: 16 17
formalDeclList (56)
    on left: 12 13, on right: 13 16
formalDecl (57)
    on left: 14 15, on right: 12 13
funDecl (58)
    on left: 16 17, on right: 5
localDeclList (59)
    on left: 18 19, on right: 16 17 19
statementList (60)
    on left: 20 21, on right: 16 17 21 27
statement (61)
    on left: 22 23 24 25 26, on right: 21 30 31 32
compoundStmt (62)
    on left: 27, on right: 22
assignStmt (63)
    on left: 28 29, on right: 23
condStmt (64)
    on left: 30 31, on right: 24
loopStmt (65)
    on left: 32, on right: 25
returnStmt (66)
    on left: 33 34, on right: 26
expression (67)
    on left: 35 36, on right: 28 29 30 31 32 34 36 51 60 61
relop (68)
    on left: 37 38 39 40 41 42, on right: 36
addExpr (69)
    on left: 43 44, on right: 35 36 44 57
addop (70)
    on left: 45 46, on right: 44
term (71)
    on left: 47 48, on right: 43 44 48
mulop (72)
    on left: 49 50, on right: 48
factor (73)
    on left: 51 52 53 54 55, on right: 47 48
var (74)
    on left: 56 57, on right: 28 52
funCallExpr (75)
    on left: 58 59, on right: 53
argList (76)
    on left: 60 61, on right: 59 61


state 0

    0 $accept: . program $end

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    program        go to state 4
    declList       go to state 5
    decl           go to state 6
    typeSpecifier  go to state 7
    varDecl        go to state 8
    funcTypeName   go to state 9
    funDecl        go to state 10


state 1

    6 typeSpecifier: KWD_INT .

    $default  reduce using rule 6 (typeSpecifier)


state 2

    7 typeSpecifier: KWD_CHAR .

    $default  reduce using rule 7 (typeSpecifier)


state 3

    8 typeSpecifier: KWD_VOID .

    $default  reduce using rule 8 (typeSpecifier)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 11


state 5

    1 program: declList .
    3 declList: declList . decl

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl           go to state 12
    typeSpecifier  go to state 7
    varDecl        go to state 8
    funcTypeName   go to state 9
    funDecl        go to state 10


state 6

    2 declList: decl .

    $default  reduce using rule 2 (declList)


state 7

    9 varDecl: typeSpecifier . ID SEMICLN
   10        | typeSpecifier . ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN
   11 funcTypeName: typeSpecifier . ID

    ID  shift, and go to state 13


state 8

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


state 9

   16 funDecl: funcTypeName . LPAREN formalDeclList RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT
   17        | funcTypeName . LPAREN RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT

    LPAREN  shift, and go to state 14


state 10

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


state 11

    0 $accept: program $end .

    $default  accept


state 12

    3 declList: declList decl .

    $default  reduce using rule 3 (declList)


state 13

    9 varDecl: typeSpecifier ID . SEMICLN
   10        | typeSpecifier ID . LSQ_BRKT INTCONST RSQ_BRKT SEMICLN
   11 funcTypeName: typeSpecifier ID .

    LSQ_BRKT  shift, and go to state 15
    SEMICLN   shift, and go to state 16

    $default  reduce using rule 11 (funcTypeName)


state 14

   16 funDecl: funcTypeName LPAREN . formalDeclList RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT
   17        | funcTypeName LPAREN . RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3
    RPAREN    shift, and go to state 17

    typeSpecifier   go to state 18
    formalDeclList  go to state 19
    formalDecl      go to state 20


state 15

   10 varDecl: typeSpecifier ID LSQ_BRKT . INTCONST RSQ_BRKT SEMICLN

    INTCONST  shift, and go to state 21


state 16

    9 varDecl: typeSpecifier ID SEMICLN .

    $default  reduce using rule 9 (varDecl)


state 17

   17 funDecl: funcTypeName LPAREN RPAREN . LCRLY_BRKT localDeclList statementList RCRLY_BRKT

    LCRLY_BRKT  shift, and go to state 22


state 18

   14 formalDecl: typeSpecifier . ID
   15           | typeSpecifier . ID LSQ_BRKT RSQ_BRKT

    ID  shift, and go to state 23


state 19

   16 funDecl: funcTypeName LPAREN formalDeclList . RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT

    RPAREN  shift, and go to state 24


state 20

   12 formalDeclList: formalDecl .
   13               | formalDecl . COMMA formalDeclList

    COMMA  shift, and go to state 25

    $default  reduce using rule 12 (formalDeclList)


state 21

   10 varDecl: typeSpecifier ID LSQ_BRKT INTCONST . RSQ_BRKT SEMICLN

    RSQ_BRKT  shift, and go to state 26


state 22

   17 funDecl: funcTypeName LPAREN RPAREN LCRLY_BRKT . localDeclList statementList RCRLY_BRKT

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 18 (localDeclList)

    typeSpecifier  go to state 27
    varDecl        go to state 28
    localDeclList  go to state 29


state 23

   14 formalDecl: typeSpecifier ID .
   15           | typeSpecifier ID . LSQ_BRKT RSQ_BRKT

    LSQ_BRKT  shift, and go to state 30

    $default  reduce using rule 14 (formalDecl)


state 24

   16 funDecl: funcTypeName LPAREN formalDeclList RPAREN . LCRLY_BRKT localDeclList statementList RCRLY_BRKT

    LCRLY_BRKT  shift, and go to state 31


state 25

   13 formalDeclList: formalDecl COMMA . formalDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    typeSpecifier   go to state 18
    formalDeclList  go to state 32
    formalDecl      go to state 20


state 26

   10 varDecl: typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT . SEMICLN

    SEMICLN  shift, and go to state 33


state 27

    9 varDecl: typeSpecifier . ID SEMICLN
   10        | typeSpecifier . ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN

    ID  shift, and go to state 34


state 28

   19 localDeclList: varDecl . localDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 18 (localDeclList)

    typeSpecifier  go to state 27
    varDecl        go to state 28
    localDeclList  go to state 35


state 29

   17 funDecl: funcTypeName LPAREN RPAREN LCRLY_BRKT localDeclList . statementList RCRLY_BRKT

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    $default  reduce using rule 20 (statementList)

    statementList  go to state 44
    statement      go to state 45
    compoundStmt   go to state 46
    assignStmt     go to state 47
    condStmt       go to state 48
    loopStmt       go to state 49
    returnStmt     go to state 50
    expression     go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    var            go to state 55
    funCallExpr    go to state 56


state 30

   15 formalDecl: typeSpecifier ID LSQ_BRKT . RSQ_BRKT

    RSQ_BRKT  shift, and go to state 57


state 31

   16 funDecl: funcTypeName LPAREN formalDeclList RPAREN LCRLY_BRKT . localDeclList statementList RCRLY_BRKT

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 18 (localDeclList)

    typeSpecifier  go to state 27
    varDecl        go to state 28
    localDeclList  go to state 58


state 32

   13 formalDeclList: formalDecl COMMA formalDeclList .

    $default  reduce using rule 13 (formalDeclList)


state 33

   10 varDecl: typeSpecifier ID LSQ_BRKT INTCONST RSQ_BRKT SEMICLN .

    $default  reduce using rule 10 (varDecl)


state 34

    9 varDecl: typeSpecifier ID . SEMICLN
   10        | typeSpecifier ID . LSQ_BRKT INTCONST RSQ_BRKT SEMICLN

    LSQ_BRKT  shift, and go to state 15
    SEMICLN   shift, and go to state 16


state 35

   19 localDeclList: varDecl localDeclList .

    $default  reduce using rule 19 (localDeclList)


state 36

   56 var: ID .
   57    | ID . LSQ_BRKT addExpr RSQ_BRKT
   58 funCallExpr: ID . LPAREN RPAREN
   59            | ID . LPAREN argList RPAREN

    LSQ_BRKT  shift, and go to state 59
    LPAREN    shift, and go to state 60

    $default  reduce using rule 56 (var)


state 37

   54 factor: INTCONST .

    $default  reduce using rule 54 (factor)


state 38

   55 factor: CHARCONST .

    $default  reduce using rule 55 (factor)


state 39

   30 condStmt: KWD_IF . LPAREN expression RPAREN statement
   31         | KWD_IF . LPAREN expression RPAREN statement KWD_ELSE statement

    LPAREN  shift, and go to state 61


state 40

   32 loopStmt: KWD_WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


state 41

   33 returnStmt: KWD_RETURN . SEMICLN
   34           | KWD_RETURN . expression SEMICLN

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43
    SEMICLN    shift, and go to state 63

    expression   go to state 64
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 42

   27 compoundStmt: LCRLY_BRKT . statementList RCRLY_BRKT

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    $default  reduce using rule 20 (statementList)

    statementList  go to state 66
    statement      go to state 45
    compoundStmt   go to state 46
    assignStmt     go to state 47
    condStmt       go to state 48
    loopStmt       go to state 49
    returnStmt     go to state 50
    expression     go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    var            go to state 55
    funCallExpr    go to state 56


state 43

   51 factor: LPAREN . expression RPAREN

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    expression   go to state 67
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 44

   17 funDecl: funcTypeName LPAREN RPAREN LCRLY_BRKT localDeclList statementList . RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 68


state 45

   21 statementList: statement . statementList

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    $default  reduce using rule 20 (statementList)

    statementList  go to state 69
    statement      go to state 45
    compoundStmt   go to state 46
    assignStmt     go to state 47
    condStmt       go to state 48
    loopStmt       go to state 49
    returnStmt     go to state 50
    expression     go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    var            go to state 55
    funCallExpr    go to state 56


state 46

   22 statement: compoundStmt .

    $default  reduce using rule 22 (statement)


state 47

   23 statement: assignStmt .

    $default  reduce using rule 23 (statement)


state 48

   24 statement: condStmt .

    $default  reduce using rule 24 (statement)


state 49

   25 statement: loopStmt .

    $default  reduce using rule 25 (statement)


state 50

   26 statement: returnStmt .

    $default  reduce using rule 26 (statement)


state 51

   29 assignStmt: expression . SEMICLN
   36 expression: expression . relop addExpr

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75
    SEMICLN   shift, and go to state 76

    relop  go to state 77


state 52

   35 expression: addExpr .
   44 addExpr: addExpr . addop term

    OPER_ADD  shift, and go to state 78
    OPER_SUB  shift, and go to state 79

    $default  reduce using rule 35 (expression)

    addop  go to state 80


state 53

   43 addExpr: term .
   48 term: term . mulop factor

    OPER_MUL  shift, and go to state 81
    OPER_DIV  shift, and go to state 82

    $default  reduce using rule 43 (addExpr)

    mulop  go to state 83


state 54

   47 term: factor .

    $default  reduce using rule 47 (term)


state 55

   28 assignStmt: var . OPER_ASGN expression SEMICLN
   52 factor: var .

    OPER_ASGN  shift, and go to state 84

    $default  reduce using rule 52 (factor)


state 56

   53 factor: funCallExpr .

    $default  reduce using rule 53 (factor)


state 57

   15 formalDecl: typeSpecifier ID LSQ_BRKT RSQ_BRKT .

    $default  reduce using rule 15 (formalDecl)


state 58

   16 funDecl: funcTypeName LPAREN formalDeclList RPAREN LCRLY_BRKT localDeclList . statementList RCRLY_BRKT

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    $default  reduce using rule 20 (statementList)

    statementList  go to state 85
    statement      go to state 45
    compoundStmt   go to state 46
    assignStmt     go to state 47
    condStmt       go to state 48
    loopStmt       go to state 49
    returnStmt     go to state 50
    expression     go to state 51
    addExpr        go to state 52
    term           go to state 53
    factor         go to state 54
    var            go to state 55
    funCallExpr    go to state 56


state 59

   57 var: ID LSQ_BRKT . addExpr RSQ_BRKT

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    addExpr      go to state 86
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 60

   58 funCallExpr: ID LPAREN . RPAREN
   59            | ID LPAREN . argList RPAREN

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43
    RPAREN     shift, and go to state 87

    expression   go to state 88
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56
    argList      go to state 89


state 61

   30 condStmt: KWD_IF LPAREN . expression RPAREN statement
   31         | KWD_IF LPAREN . expression RPAREN statement KWD_ELSE statement

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    expression   go to state 90
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 62

   32 loopStmt: KWD_WHILE LPAREN . expression RPAREN statement

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    expression   go to state 91
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 63

   33 returnStmt: KWD_RETURN SEMICLN .

    $default  reduce using rule 33 (returnStmt)


state 64

   34 returnStmt: KWD_RETURN expression . SEMICLN
   36 expression: expression . relop addExpr

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75
    SEMICLN   shift, and go to state 92

    relop  go to state 77


state 65

   52 factor: var .

    $default  reduce using rule 52 (factor)


state 66

   27 compoundStmt: LCRLY_BRKT statementList . RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 93


state 67

   36 expression: expression . relop addExpr
   51 factor: LPAREN expression . RPAREN

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75
    RPAREN    shift, and go to state 94

    relop  go to state 77


state 68

   17 funDecl: funcTypeName LPAREN RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT .

    $default  reduce using rule 17 (funDecl)


state 69

   21 statementList: statement statementList .

    $default  reduce using rule 21 (statementList)


state 70

   38 relop: OPER_LT .

    $default  reduce using rule 38 (relop)


state 71

   39 relop: OPER_GT .

    $default  reduce using rule 39 (relop)


state 72

   40 relop: OPER_GTE .

    $default  reduce using rule 40 (relop)


state 73

   37 relop: OPER_LTE .

    $default  reduce using rule 37 (relop)


state 74

   41 relop: OPER_EQ .

    $default  reduce using rule 41 (relop)


state 75

   42 relop: OPER_NEQ .

    $default  reduce using rule 42 (relop)


state 76

   29 assignStmt: expression SEMICLN .

    $default  reduce using rule 29 (assignStmt)


state 77

   36 expression: expression relop . addExpr

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    addExpr      go to state 95
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 78

   45 addop: OPER_ADD .

    $default  reduce using rule 45 (addop)


state 79

   46 addop: OPER_SUB .

    $default  reduce using rule 46 (addop)


state 80

   44 addExpr: addExpr addop . term

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    term         go to state 96
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 81

   49 mulop: OPER_MUL .

    $default  reduce using rule 49 (mulop)


state 82

   50 mulop: OPER_DIV .

    $default  reduce using rule 50 (mulop)


state 83

   48 term: term mulop . factor

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    factor       go to state 97
    var          go to state 65
    funCallExpr  go to state 56


state 84

   28 assignStmt: var OPER_ASGN . expression SEMICLN

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    expression   go to state 98
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 85

   16 funDecl: funcTypeName LPAREN formalDeclList RPAREN LCRLY_BRKT localDeclList statementList . RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 99


state 86

   44 addExpr: addExpr . addop term
   57 var: ID LSQ_BRKT addExpr . RSQ_BRKT

    OPER_ADD  shift, and go to state 78
    OPER_SUB  shift, and go to state 79
    RSQ_BRKT  shift, and go to state 100

    addop  go to state 80


state 87

   58 funCallExpr: ID LPAREN RPAREN .

    $default  reduce using rule 58 (funCallExpr)


state 88

   36 expression: expression . relop addExpr
   60 argList: expression .

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75

    $default  reduce using rule 60 (argList)

    relop  go to state 77


state 89

   59 funCallExpr: ID LPAREN argList . RPAREN
   61 argList: argList . COMMA expression

    RPAREN  shift, and go to state 101
    COMMA   shift, and go to state 102


state 90

   30 condStmt: KWD_IF LPAREN expression . RPAREN statement
   31         | KWD_IF LPAREN expression . RPAREN statement KWD_ELSE statement
   36 expression: expression . relop addExpr

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75
    RPAREN    shift, and go to state 103

    relop  go to state 77


state 91

   32 loopStmt: KWD_WHILE LPAREN expression . RPAREN statement
   36 expression: expression . relop addExpr

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75
    RPAREN    shift, and go to state 104

    relop  go to state 77


state 92

   34 returnStmt: KWD_RETURN expression SEMICLN .

    $default  reduce using rule 34 (returnStmt)


state 93

   27 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT .

    $default  reduce using rule 27 (compoundStmt)


state 94

   51 factor: LPAREN expression RPAREN .

    $default  reduce using rule 51 (factor)


state 95

   36 expression: expression relop addExpr .
   44 addExpr: addExpr . addop term

    OPER_ADD  shift, and go to state 78
    OPER_SUB  shift, and go to state 79

    $default  reduce using rule 36 (expression)

    addop  go to state 80


state 96

   44 addExpr: addExpr addop term .
   48 term: term . mulop factor

    OPER_MUL  shift, and go to state 81
    OPER_DIV  shift, and go to state 82

    $default  reduce using rule 44 (addExpr)

    mulop  go to state 83


state 97

   48 term: term mulop factor .

    $default  reduce using rule 48 (term)


state 98

   28 assignStmt: var OPER_ASGN expression . SEMICLN
   36 expression: expression . relop addExpr

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75
    SEMICLN   shift, and go to state 105

    relop  go to state 77


state 99

   16 funDecl: funcTypeName LPAREN formalDeclList RPAREN LCRLY_BRKT localDeclList statementList RCRLY_BRKT .

    $default  reduce using rule 16 (funDecl)


state 100

   57 var: ID LSQ_BRKT addExpr RSQ_BRKT .

    $default  reduce using rule 57 (var)


state 101

   59 funCallExpr: ID LPAREN argList RPAREN .

    $default  reduce using rule 59 (funCallExpr)


state 102

   61 argList: argList COMMA . expression

    ID         shift, and go to state 36
    INTCONST   shift, and go to state 37
    CHARCONST  shift, and go to state 38
    LPAREN     shift, and go to state 43

    expression   go to state 106
    addExpr      go to state 52
    term         go to state 53
    factor       go to state 54
    var          go to state 65
    funCallExpr  go to state 56


state 103

   30 condStmt: KWD_IF LPAREN expression RPAREN . statement
   31         | KWD_IF LPAREN expression RPAREN . statement KWD_ELSE statement

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    statement     go to state 107
    compoundStmt  go to state 46
    assignStmt    go to state 47
    condStmt      go to state 48
    loopStmt      go to state 49
    returnStmt    go to state 50
    expression    go to state 51
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    var           go to state 55
    funCallExpr   go to state 56


state 104

   32 loopStmt: KWD_WHILE LPAREN expression RPAREN . statement

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    statement     go to state 108
    compoundStmt  go to state 46
    assignStmt    go to state 47
    condStmt      go to state 48
    loopStmt      go to state 49
    returnStmt    go to state 50
    expression    go to state 51
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    var           go to state 55
    funCallExpr   go to state 56


state 105

   28 assignStmt: var OPER_ASGN expression SEMICLN .

    $default  reduce using rule 28 (assignStmt)


state 106

   36 expression: expression . relop addExpr
   61 argList: argList COMMA expression .

    OPER_LT   shift, and go to state 70
    OPER_GT   shift, and go to state 71
    OPER_GTE  shift, and go to state 72
    OPER_LTE  shift, and go to state 73
    OPER_EQ   shift, and go to state 74
    OPER_NEQ  shift, and go to state 75

    $default  reduce using rule 61 (argList)

    relop  go to state 77


state 107

   30 condStmt: KWD_IF LPAREN expression RPAREN statement .
   31         | KWD_IF LPAREN expression RPAREN statement . KWD_ELSE statement

    KWD_ELSE  shift, and go to state 109

    $default  reduce using rule 30 (condStmt)


state 108

   32 loopStmt: KWD_WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 32 (loopStmt)


state 109

   31 condStmt: KWD_IF LPAREN expression RPAREN statement KWD_ELSE . statement

    ID          shift, and go to state 36
    INTCONST    shift, and go to state 37
    CHARCONST   shift, and go to state 38
    KWD_IF      shift, and go to state 39
    KWD_WHILE   shift, and go to state 40
    KWD_RETURN  shift, and go to state 41
    LCRLY_BRKT  shift, and go to state 42
    LPAREN      shift, and go to state 43

    statement     go to state 110
    compoundStmt  go to state 46
    assignStmt    go to state 47
    condStmt      go to state 48
    loopStmt      go to state 49
    returnStmt    go to state 50
    expression    go to state 51
    addExpr       go to state 52
    term          go to state 53
    factor        go to state 54
    var           go to state 55
    funCallExpr   go to state 56


state 110

   31 condStmt: KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement .

    $default  reduce using rule 31 (condStmt)
